--- a/views/date.erb
+++ b/views/date.erb
@@ -7,8 +7,7 @@ require 'date'
     <title></title>
     </head>
     <body>
-  <h1>Today</h1>
-  <% date = "Date.strptime("%A, %B %d, %Y")" %>
-  <p>The date is <%= date %> </p>
+<h1>Today</h1>
+ <p>The date is <% days = %w(Sunday Monday Tuesday Wednesday Thursday Friday Saturday) %><% months = %w(January February March April May June July August September October November December) %><% currentTime = Time.now %><%= days[currentTime.wday] + ', ' + months[currentTime.month - 1] + ' ' + format('%02d', currentTime.mday) + ', ' + currentTime.year.to_s %>.</p>
   </body>
   </html>
